--- a/packages/SystemUI/res/values-nl/strings.xml
+++ b/packages/SystemUI/res/values-nl/strings.xml
@@ -231,6 +231,7 @@
     <string name="quick_settings_torch_off">Zaklamp uit</string>
     <string name="quick_settings_nfc">NFC</string>
     <string name="quick_settings_nfc_off">NFC uit</string>
+    <string name="quick_settings_fcharge">Snelladen</string>
     <string name="quick_settings_screen_timeout">Time-out</string>
     <string name="quick_settings_usb_tether_off_label">Losgekoppeld</string>
     <string name="quick_settings_usb_tether_connected_label">Tethering uit</string>
@@ -246,4 +247,5 @@
     <string name="navbar_menu_conditional_button">Menuknop (altijd verbergen)</string>
     <string name="navbar_menu_always_button">Menuknop (altijd tonen)</string>
     <string name="navbar_menu_big_button">Menuknop</string>
+
 </resources>
