--- a/packages/SystemUI/res/values-nl/strings.xml
+++ b/packages/SystemUI/res/values-nl/strings.xml
@@ -247,5 +247,7 @@
     <string name="navbar_menu_conditional_button">Menuknop (altijd verbergen)</string>
     <string name="navbar_menu_always_button">Menuknop (altijd tonen)</string>
     <string name="navbar_menu_big_button">Menuknop</string>
+    <string name="service_free_mem"><xliff:g id="memory">%1$s</xliff:g> vrij</string>
+    <string name="service_used_mem"><xliff:g id="memory">%1$s</xliff:g> gebruikt</string>
 
 </resources>
